fix: hid the scrollbars using webkit-scrollbar display:none

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,3 +17,7 @@
 a {
   text-decoration: none;
 }
+
+body::-webkit-scrollbar {
+  display: none;
+}
